UI alignment fixed

--- a/blocks/custom-card-carousel/custom-card-carousel.css
+++ b/blocks/custom-card-carousel/custom-card-carousel.css
@@ -41,12 +41,13 @@
   bottom: 0;
   -webkit-transform: scale(0);
     transform: scale(0);
-  z-index: 2;
+    transition: .5s;
+  z-index: 1;
 }
 
 .whaet-slide:hover > div > div::before {
-    -webkit-transform: scale(1.2);
-        transform: scale(1.2);
+    -webkit-transform: scale(1);
+        transform: scale(1);
 }
 
 .whaet-slide > div > div:last-child {
@@ -60,7 +61,7 @@
   text-align: center;
   z-index: 3;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
-  transition: bottom 0.4s ease, background-color 0.4s ease;
+  transition: .5s;
 }
 
 .whaet-slide:hover > div > div:last-child {
